force-app/main/default/objects/Service_Visit__c/Service_Visit__c.object-meta.xml
<CustomObject>
    <description>Tracks upcoming and completed visits related to a service</description>
    <label>Service Visit</label>
    <nameField>
        <displayFormat>Visit-{YY}{MM}{DD}-{0}</displayFormat>
        <label>Visit History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>