force-app/main/default/objects/Service_Visit__c/fields/Actual_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Insurance__c</fullName>
    <formula>0.5 *  Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>