force-app/main/default/objects/Service_Visit__c/fields/Actual_Medicare__c.field-meta.xml
<CustomField>
    <fullName>Actual_Medicare__c</fullName>
    <formula>0.4 *  Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Medicare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>