force-app/main/default/objects/Service_Visit__c/fields/Actual_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Actual_Out_of_Pocket__c</fullName>
    <formula>0.10 *  Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Out-of-Pocket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>