force-app/main/default/objects/Service_Visit__c/fields/Arrival_Notes__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Notes__c</fullName>
    <label>Arrival Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>