force-app/main/default/objects/Service_Visit__c/fields/Check_In_Distance__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Distance__c</fullName>
    <formula>DISTANCE( Service__r.Service_Recipient__r.MailingAddress ,  Checkin_Location__c , &apos;mi&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check In Distance (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>