force-app/main/default/objects/Service_Visit__c/fields/Checkin_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Date_Time__c</fullName>
    <label>Check-in Date/Time</label>
    <type>DateTime</type>
</CustomField>