force-app/main/default/objects/Service_Visit__c/fields/Checkin_Location__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Location__c</fullName>
    <label>Check-in Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>