force-app/main/default/objects/Service_Visit__c/fields/Checkout_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Date_Time__c</fullName>
    <label>Check-out Date/Time</label>
    <type>DateTime</type>
</CustomField>