force-app/main/default/objects/Service_Visit__c/fields/Checkout_Location__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Location__c</fullName>
    <label>Check-out Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>