force-app/main/default/objects/Service_Visit__c/fields/Complaints__c.field-meta.xml
<CustomField>
    <fullName>Complaints__c</fullName>
    <label>Complaints?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>