force-app/main/default/objects/Service_Visit__c/fields/Cost_Actual_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Cost_Actual_Estimated__c</fullName>
    <formula>Actual_Cost__c -  Estimated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost, Actual - Estimated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>