force-app/main/default/objects/Service_Visit__c/fields/Departure_Notes__c.field-meta.xml
<CustomField>
    <fullName>Departure_Notes__c</fullName>
    <label>Departure Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>