force-app/main/default/objects/Service_Visit__c/fields/Distance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Distance_Flag__c</fullName>
    <formula>IF(Check_In_Distance__c &lt;= 0.25, IMAGE(&quot;/resource/1623365139000/DistanceGood&quot;, &quot;Green&quot; , 30, 30) , IMAGE(&quot;/resource/1623365155000/DistanceBad&quot;, &quot;Red&quot; , 30, 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If distance is over 0.25 miles, show red.</inlineHelpText>
    <label>Distance Flag</label>
    <type>Text</type>
</CustomField>