force-app/main/default/objects/Service_Visit__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <formula>Service__r.Estimated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>