force-app/main/default/objects/Service_Visit__c/fields/Recent_Visit__c.field-meta.xml
<CustomField>
    <fullName>Recent_Visit__c</fullName>
    <formula>IF(NOW() - Checkin_Date_Time__c &gt; 0 &amp;&amp; NOW() - Checkin_Date_Time__c &lt; 6, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent Visit</label>
    <type>Checkbox</type>
</CustomField>