force-app/main/default/objects/Service_Visit__c/fields/Recipient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_First_Name__c</fullName>
    <formula>Service__r.Service_Recipient__r.FirstName</formula>
    <label>Recipient&apos;s First Name</label>
    <type>Text</type>
</CustomField>