force-app/main/default/objects/Service_Visit__c/fields/Service_Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Service_Performed_By__c</fullName>
    <label>Service Performed By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>