force-app/main/default/objects/Service_Visit__c/fields/Visit_Time_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Visit_Time_in_minutes__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &quot;Complete&quot;), (Checkout_Date_Time__c -  Checkin_Date_Time__c)*24*60, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Time (in minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>