force-app/main/default/objects/Service_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Checkin_Date_Time__c</columns>
    <columns>Checkout_Date_Time__c</columns>
    <columns>Visit_Time_in_minutes__c</columns>
    <columns>Check_In_Distance__c</columns>
    <columns>Status__c</columns>
    <columns>Service_Performed_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>